src/main/java/org/example/myblog/exception/errors/CommentError.java
package org.example.myblog.exception.errors;

public enum CommentError {
}
